<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/about_linearLayout1"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical" >
	    
    <TextView
        android:id="@+id/battery_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/battery_temp" />

    
    <TextView
        android:id="@+id/battery_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/battery_level" />
    
    <TextView
        android:id="@+id/ambient_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ambient_temp" />
    
    <TextView
        android:id="@+id/ambient_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ambient_type" />

    <TextView
        android:id="@+id/last_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_update" />
    
    <TextView
        android:id="@+id/num_updates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num_updates" />
    
    </LinearLayout>
</RelativeLayout>
